string and list operations